Fixed Header, Main, Footer alignment

--- a/style1.css
+++ b/style1.css
@@ -1,24 +1,4 @@
 body {
-	background: lightcyan;
-	width: 800px;
-	margin:auto;
-}
-
-h1 {
-	color:maroon;
-	text-align: center;
-	font-family:'Denk One', sans-serif;
-}
-
-p{
-	color:gray;
-	border:1px solid gray;
-	padding:10px;
-}
-
-/* PRobably delete above this*/
-
-body {
 	background:#f9e933;
 }
 
@@ -26,10 +6,45 @@ header, main, footer {
 	min-width:855px;
 }
 
+header.container, main.container, footer.container {
+	max-width:855px;
+	margin: auto;
+}
+
 header {
+	background:white;
+	overflow:auto;
+}
+
+header h1 {
+	float:left;
+	width:570px;
+}
+
+header nav {
+	float:right;
+	width:285px;
+}
+
+main {
 	background:white;
 }
 
-footer {
-	background:white;
+.article1 {
+	float:left;
+	width:570px;
+}
+.lightbulb {
+	float:right;
+	width:285px;
+}
+
+.contact {
+	float:left;
+	width:570px;
+}
+
+.sitemap {
+	float:right;
+	width:285px;
 }
